--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,6 +151,7 @@ dependencies {
 
     implementation 'com.itextpdf:itext7-core:7.2.1'
 
-
+    ///swipe down to refresh
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 }
