--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,28 +105,30 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ActivitySignup"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.ActivityLogin"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ActivitySplash"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait">
 
         </activity>
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:label="@string/app_name" />
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
 
         <service
             android:name=".api.NotificationService"
