bugs fixed for nominee

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,5 +152,8 @@ dependencies {
     implementation 'com.itextpdf:itext7-core:7.2.1'
 
 
+    //////// refresh
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 }
