--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.ActivityStatment"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".ui.ActivityProfile"
             android:exported="false" />
@@ -99,40 +99,34 @@
             android:name=".ui.ActivityUserDetails"
             android:exported="true"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.ActivityForgetPassword"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.ActivitySignup"
             android:exported="false"
             android:screenOrientation="portrait" >
-
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
 
         </activity>
         <activity
             android:name=".ui.ActivityLogin"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-
         <activity
             android:name=".ui.ActivitySplash"
             android:exported="true"
             android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name" >
+
 
         </activity>
 
