phone +address update set

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,40 +2,39 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
-
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.LifeChanger"
         tools:targetApi="31">
-
-        <!--<meta-data
+        <activity
+            android:name=".ui.ActivityEditNominee"
+            android:exported="false" />
+        <!--
+        <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_stat_ic_notification" />
         &lt;!&ndash; Set color used with incoming notification messages. This is used when no color is set for the incoming
              notification message. See README(https://goo.gl/6BKBk7) for more. &ndash;&gt;
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/colorAccent" />-->
-
+            android:resource="@color/colorAccent" />
+        -->
         <activity
             android:name=".ui.ActivityNotifications"
             android:exported="false" />
@@ -99,42 +98,32 @@
             android:name=".ui.ActivityUserDetails"
             android:exported="true"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.ActivityForgetPassword"
             android:exported="false"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.ActivitySignup"
-            android:exported="false"
-            android:screenOrientation="portrait" >
-
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-
-        </activity>
+            android:exported="true"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.ActivityLogin"
             android:exported="false"
             android:screenOrientation="portrait" />
-
-
         <activity
             android:name=".ui.ActivitySplash"
             android:exported="true"
             android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:label="@string/app_name" >
-
-        </activity>
+            android:label="@string/app_name"></activity>
 
         <service
             android:name=".api.NotificationService"
@@ -145,8 +134,6 @@
                 <action android:name="com.google.android.c2dn.intent.Reciever" />
             </intent-filter>
         </service>
-
-
     </application>
 
 </manifest>
