new investment request bug fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ActivityNewInvestmentReq"
-            android:exported="false"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ActivityWithdraw"
