--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,7 +97,14 @@
         <activity
             android:name=".ui.ActivityUserDetails"
             android:exported="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".ui.ActivityForgetPassword"
             android:exported="false"
@@ -105,7 +112,11 @@
         <activity
             android:name=".ui.ActivitySignup"
             android:exported="true"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait">
+
+
+
+        </activity>
         <activity
             android:name=".ui.ActivityLogin"
             android:exported="false"
@@ -114,11 +125,9 @@
             android:name=".ui.ActivitySplash"
             android:exported="true"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
+
         </activity>
         <activity
             android:name=".ui.MainActivity"
