--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,4 +154,8 @@ dependencies {
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
+
+    implementation 'com.pixelcarrot.base64image:base64image:1.0.0'
+
+
 }
