contact us added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,8 +99,6 @@
             android:exported="true"
             android:screenOrientation="portrait" >
 
-
-
         </activity>
         <activity
             android:name=".ui.ActivityForgetPassword"
@@ -126,14 +124,13 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
-
         </activity>
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name">
+
+        </activity>
 
         <service
             android:name=".api.NotificationService"
